# xeus-r

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment-dev.yml  xeus-rConfig.cmake.in
.github/workflows/: main.yml
docs/source/: dev-build-options.rst  index.rst
include/xeus-r/: xeus_r_config.hpp  xinterpreter.hpp
share/jupyter/kernels/xr/: kernel.json.in
src/: main.cpp  main_emscripten_kernel.cpp  xexecute_request.cpp  xinterpreter.cpp  xio.cpp
test/: test_xr_kernel.py
